past_runs/362628/dragon-r_10_bound-persist_True_bounding-dist_3_seq-level_2_tau_/err.job.362629.err
Traceback (most recent call last):
  File "discrete/run/teacher/dungeon_quest_teacher_td3.py", line 10, in <module>
    from discrete.lib.main import run_training
  File "/lustre/fs1/home/amckinney/Local_Neuro_Symbolic/discrete/lib/main.py", line 11, in <module>
    from discrete.lib.training import train_agent, distill_agent
  File "/lustre/fs1/home/amckinney/Local_Neuro_Symbolic/discrete/lib/training.py", line 879
    if if ep_counter+1 % 1000 == 0:
        ^
SyntaxError: invalid syntax
